--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Homework 2</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
+            <a href="./index.html" class="logo">WEBSTUDIO</a>
+            <ul class="nav-list">
                 <li>
                     <a href="">Studio</a>
                 </li>
@@ -23,7 +27,7 @@
             </ul>
         </nav>
         <address>
-            <ul>
+            <ul class="address-list">
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
@@ -34,11 +38,11 @@
         </address>
     </header>
     <main>
-        <section>
+        <section class="service">
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
-        <section>
+        <section class="features">
             <h2>Features</h2>
             <ul>
                 <li>
@@ -63,7 +67,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="team">
             <h2>Our Team</h2>
             <ul>
                 <li>
@@ -88,7 +92,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="portfolio">
             <h2>Our Portfolio</h2>
             <ul>
                 <li>
@@ -125,7 +129,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">WEBSTUDIO</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
