--- a/index.html
+++ b/index.html
@@ -3,31 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Homework 2</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo">WEBSTUDIO</a>
-            <ul class="nav-list">
+            <a href="./index.html" class="logo">
+                web
+                <span class="logo-span">studio</span>
+            </a>
+            <ul>
                 <li>
-                    <a href="">Studio</a>
+                    <a href="./index.html" class="nav-studio">Studio</a>
                 </li>
                 <li>
-                    <a href="">Portfolio</a>
+                    <a href="" class="nav-portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a href="">Contacts</a>
+                    <a href="" class="nav-contacts">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <address>
-            <ul class="address-list">
+        <address class="address">
+            <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
@@ -39,98 +42,101 @@
     </header>
     <main>
         <section class="service">
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <h1 class="service-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="service-button">Order Service</button>
         </section>
         <section class="features">
-            <h2>Features</h2>
+            <h2 class="section-title">features</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to
+                    <h3 class="feature-title">Strategy</h3>
+                    <p class="feature-desc">Our goal is to identify the business problem to
                         walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for
+                    <h3 class="feature-title">Punctuality</h3>
+                    <p class="feature-desc">Bring the key message to the brand's audience for
                         the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest
+                    <h3 class="feature-title">Diligence</h3>
+                    <p class="feature-desc">Research and confirm brands that present the strongest
                         digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We
+                    <h3 class="feature-title">Technologies</h3>
+                    <p class="feature-desc">Design practice focused on digital experiences. We
                         bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
         <section class="team">
-            <h2>Our Team</h2>
+            <h2 class="section-title">our team</h2>
             <ul>
                 <li>
                     <img src="./images/team-1.jpg" alt="Product Designer" width="264" height="260" />
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-title">Mark Guerrero</h3>
+                    <p class="team-desc">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team-2.jpg" alt="Frontend Developer" width="264" height="260" />
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-title">Tom Ford</h3>
+                    <p class="team-desc">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/team-3.jpg" alt="Marketing" width="264" height="260" />
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-title">Camila Garcia</h3>
+                    <p class="team-desc">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/team-4.jpg" alt="UI Designer" width="264" height="260" />
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-title">Daniel Wilson</h3>
+                    <p class="team-desc">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section class="portfolio">
-            <h2>Our Portfolio</h2>
+            <h2 class="section-title">our portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/portfolio-1.jpg" alt="Banking App" width="360" height="300" />
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-title">Banking App</h3>
+                    <p class="portfolio-desc">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360" height="300" />
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-title">Cashless Payment</h3>
+                    <p class="portfolio-desc">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-3.jpg" alt="Meditation App" width="360" height="300" />
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-title">Meditation App</h3>
+                    <p class="portfolio-desc">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-4.jpg" alt="Taxi Service" width="360" height="300" />
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-title">Taxi Service</h3>
+                    <p class="portfolio-desc">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360" height="300" />
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="portfolio-title">Screen Illustrations</h3>
+                    <p class="portfolio-desc">Design</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-6.jpg" alt="Online Courses" width="360" height="300" />
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-title">Online Courses</h3>
+                    <p class="portfolio-desc">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html" class="logo">WEBSTUDIO</a>
-        <p>
+    <footer class="footer">
+        <a href="./index.html" class="logo">
+            web
+            <span>studio</span>
+        </a>
+        <p class="footer-desc">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
