--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
         <nav>
             <a href="./index.html" class="logo">
                 web
-                <span class="logo-span">studio</span>
+                <span class="logo-span">Studio</span>
             </a>
             <ul>
                 <li>
-                    <a href="./index.html" class="nav-studio">Studio</a>
+                    <a href="./index.html" class="nav-item">Studio</a>
                 </li>
                 <li>
-                    <a href="" class="nav-portfolio">Portfolio</a>
+                    <a href="" class="nav-item">Portfolio</a>
                 </li>
                 <li>
-                    <a href="" class="nav-contacts">Contacts</a>
+                    <a href="" class="nav-item">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address class="address">
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="address-item">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="address-item">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -73,7 +73,7 @@
         <section class="team">
             <h2 class="section-title">our team</h2>
             <ul>
-                <li>
+                <li class="team-item">
                     <img src="./images/team-1.jpg" alt="Product Designer" width="264" height="260" />
                     <h3 class="team-title">Mark Guerrero</h3>
                     <p class="team-desc">Product Designer</p>
