--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
                     <h3 class="team-title">Mark Guerrero</h3>
                     <p class="team-desc">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/team-2.jpg" alt="Frontend Developer" width="264" height="260" />
                     <h3 class="team-title">Tom Ford</h3>
                     <p class="team-desc">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/team-3.jpg" alt="Marketing" width="264" height="260" />
                     <h3 class="team-title">Camila Garcia</h3>
                     <p class="team-desc">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/team-4.jpg" alt="UI Designer" width="264" height="260" />
                     <h3 class="team-title">Daniel Wilson</h3>
                     <p class="team-desc">UI Designer</p>
@@ -134,7 +134,7 @@
     <footer class="footer">
         <a href="./index.html" class="logo">
             web
-            <span>studio</span>
+            <span class="logo-span">Studio</span>
         </a>
         <p class="footer-desc">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
